I18N-1323 Refactor restclient module Refactored restclient module and update cli and webapp